--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 #Get key from https://rapidapi.com/
-REACT_APP_RAPIDAPI_HOST=''
-REACT_APP_RAPIDAPI_KEY=''
+
+#Coinranking
+REACT_APP_COINRANKING_HOST=''
+REACT_APP_COINRANKING_KEY=''
+
+#Bing
+REACT_APP_BING_SDK=true
+REACT_APP_BING_HOST=''
+REACT_APP_BING_KEY=''
